# evm

./: .gitignore  FEATURES_UPDATE.md  FINAL_REPORT.md  GROUPS.md  JSON_IMPORT.md  JSON_IMPORT_UPDATE.md  MACOS_DEPLOY.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_CASE_DIR.md  build_macos.sh  install_macos.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  macos-build.yml  publish.yml
docs/: AGENT_CLI_EVALUATION.md  ANALYSIS.md  API_REFERENCE.md  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_v2.0.0_FINAL.md  CODE_REVIEW_v2.2.0.md  DEVELOPMENT_REVIEW.md  MAIN_PY_RECOVERY.md  NEST_IMPORT.md  OPENSOURCE_LAUNCH_PLAN.md  README.md  USER_GUIDE_CN.md  code-review.md
evm/: __init__.py  __main__.py  _completion.py  _crypto.py  _groups.py  _history.py  _io.py  _json.py  _schema.py  _typing.py  _upgrade.py  cli.py  exceptions.py  formatters.py  main.py  manager.py
evm/c/: Makefile  Makefile.win  core.c  evm.h  evm_win.h  group.c  io.c  list.c  main.c  main_win.c  utils.c  utils_win.c
evm/c/evm-cli-macos/: LICENSE  README.md  install.sh
evm/python/: __init__.py  __main__.py  main.py
examples/: demo.sh  example.env  groups_demo.sh  loadmemory_demo.py  read_demo.py  read_evm_demo.py  usage_example.py
output/: config.env  demo_config.env  export.sh
skill/: SKILL.md
skill-workspace/iteration-1/: benchmark.md  generate_benchmark.py  review.html  viewer.html
skill-workspace/iteration-1/eval-1-multi-env-setup/with_skill/outputs/: result.md
skill-workspace/iteration-1/eval-1-multi-env-setup/without_skill/outputs/: result.md
skill-workspace/iteration-1/eval-2-env-import-validate/with_skill/outputs/: result.md
skill-workspace/iteration-1/eval-2-env-import-validate/without_skill/outputs/: result.md
skill-workspace/iteration-1/eval-3-exec-and-python-api/with_skill/outputs/: result.md
skill-workspace/iteration-1/eval-3-exec-and-python-api/without_skill/outputs/: result.md
skill-workspace/iteration-1/eval-4-backup-diff-restore/with_skill/outputs/: result.md
skill-workspace/iteration-1/eval-4-backup-diff-restore/without_skill/outputs/: result.md
skill-workspace/iteration-1/eval-5-cicd-python-workflow/with_skill/outputs/: cicd_workflow.py  output.txt  result.md
skill-workspace/iteration-1/eval-5-cicd-python-workflow/without_skill/outputs/: cicd_workflow.py  result.md  result.txt
skill/evals/: advanced-workflows.json  backup-restore.json  basic-variable-management.json  command-execution.json  encrypted-secrets.json  evals.json  import-export-workflow.json  multi-environment-setup.json  python-api-usage.json  schema-validation.json  self-upgrade.json  shell-integration.json  template-expansion.json
skill/references/: command-reference.md  exit-codes.md  python-api.md  security.md
skill/scripts/: evm-env-setup.sh  evm-wrapper.sh
tests/: __init__.py  run_tests.py  test_cli_additional.py  test_cli_boundary.py  test_cli_coverage.py  test_coverage_gap.py  test_formatters.py  test_inject.py  test_io_boundary.py  test_main.py  test_main_entry.py  test_main_module.py  test_shell_integration.py  test_upgrade.py  test_v230_fixes.py
tests/test_case/: FORMAT_ISSUE.md  README.md  SUMMARY.md  __init__.py  test_config.env  test_export.sh
