[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evm-cli"
dynamic = ["version"]
description = "A command-line tool for managing environment variables"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "EVM Tool", email = "evm@example.com" },
]
requires-python = ">=3.6"
keywords = ["environment", "variables", "cli", "devops", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
# No external runtime dependencies - EVM uses only Python standard library
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
lint = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/zxygithub/evm"
Repository = "https://github.com/zxygithub/evm"
Issues = "https://github.com/zxygithub/evm/issues"

[project.scripts]
evm = "evm.cli:main"

[tool.setuptools]
packages = ["evm"]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "evm.__version__" }

# ─── Ruff ────────────────────────────────────────────────────
[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "skill-workspace",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (let formatter handle)
    "B904",  # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "UP"]
"examples/*" = ["B", "UP"]
"evm/_crypto.py" = ["E501"]

# ─── mypy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
exclude = [
    "build",
    "dist",
    "tests",
    "examples",
    "skill-workspace",
]

# ─── pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["evm"]
omit = [
    "tests/*",
    "examples/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
